--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,25 @@
 <resources>
-    <string name="app_name">flixhub</string>
+    <string name="app_name">FlixHub</string>
 
-    <string name="gettingStarted_title">Welcome to FlixHub</string>
-    <string name="gettingStarted_subtitle">The best movie streaming app of the century to make your days great!</string>
+    <string name="gettingStarted_title">Bienvenue sur FlixHub</string>
+    <string name="gettingStarted_subtitle">La meilleure application de streaming du siècle ! Pour rendre vos jours meilleurs</string>
+    <string name="gettingStarted_button">Commencer</string>
+
+    <string name="register_title">Créer un compte</string>
+    <string name="register_email">Email</string>
+    <string name="register_password">Mot de passe</string>
+    <string name="register_button">Créer un compte</string>
+    <string name="register_cgu">J\'accepte les conditions d\'utilisation</string>
+    <string name="register_already_have_account">Vous avez déjà un compte ?</string>
+    <string name="register_login">Connectez-vous</string>
+
+    <string name="login_title">Connectez-vous</string>
+    <string name="login_email">Email</string>
+    <string name="login_password">Mot de passe</string>
+    <string name="login_button">Se connecter</string>
+    <string name="login_forgot_password">Mot de passe oublié ?</string>
+    <string name="login_no_account">Vous n\'avez pas de compte ?</string>
+    <string name="login_register">Créez un compte</string>
+    <string name="login_remind_me">Se souvenir de moi</string>
 
 </resources>
