feat(home): WIP showing the movies & others by category

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -31,4 +31,5 @@
     <string name="register_profile_skip">Skip</string>
     <string name="register_profile_submit">Continue</string>
     <string name="register_input_error">All fields needed.</string>
+    <string name="home_category_see_all">See all</string>
 </resources>
