--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="register_profile_skip">Passer</string>
     <string name="register_profile_submit">Continuer</string>
     <string name="register_input_error">Tous les champs sont obligatoires</string>
+    <string name="home_category_see_all">Voir tout</string>
 
 </resources>
