--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="register_profile_submit">Continuer</string>
     <string name="register_input_error">Tous les champs sont obligatoires</string>
     <string name="home_category_see_all">Voir tout</string>
+    <string name="log_choice_button">Connectez vous</string>
+    <string name="log_choice_title">Let\'s you in</string>
 
 </resources>
