--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -34,4 +34,6 @@
     <string name="home_category_see_all">See all</string>
     <string name="log_choice_button">Sign in with password</string>
     <string name="log_choice_title">Let\'s you in</string>
+    <string name="home_play_button">Play</string>
+    <string name="home_add_list">My list</string>
 </resources>
