--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,7 @@
     <string name="home_category_see_all">Voir tout</string>
     <string name="log_choice_button">Connectez vous</string>
     <string name="log_choice_title">Let\'s you in</string>
+    <string name="home_play_button">Regarder</string>
+    <string name="home_add_list">Ma liste</string>
 
 </resources>
