--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -36,4 +36,6 @@
     <string name="log_choice_title">Let\'s you in</string>
     <string name="home_play_button">Play</string>
     <string name="home_add_list">My list</string>
+    <string name="media_download_button">Download</string>
+    <string name="media_play_button">Play</string>
 </resources>
