--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,7 @@
     <string name="log_choice_title">Let\'s you in</string>
     <string name="home_play_button">Regarder</string>
     <string name="home_add_list">Ma liste</string>
+    <string name="media_download_button">Télécharger</string>
+    <string name="media_play_button">Regarder</string>
 
 </resources>
