--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -38,4 +38,5 @@
     <string name="home_add_list">My list</string>
     <string name="media_download_button">Download</string>
     <string name="media_play_button">Play</string>
+    <string name="media_trailer_title">Trailers</string>
 </resources>
