refactor(architecture): switching to an MVC like architecture and refactoring activities and fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="media_download_button">Télécharger</string>
     <string name="media_play_button">Regarder</string>
     <string name="media_trailer_title">Bande d\'annonces</string>
+    <string name="media_play_warn">C\'est illégal, nous ne pouvons pas diffuser les films sans en avoir les droits de distribution</string>
 
 </resources>
