--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -39,4 +39,5 @@
     <string name="media_download_button">Download</string>
     <string name="media_play_button">Play</string>
     <string name="media_trailer_title">Trailers</string>
+    <string name="media_play_warn">It\'s illegal, we can\'t stream the movie without the distribution rights</string>
 </resources>
