--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="logout_cancel">Annuler</string>
     <string name="logout_confirm">Oui, se déconnecter</string>
     <string name="logout_message">Êtes-vous sûr de vouloir vous déconnecter ?</string>
+    <string name="discover_search_hint">Rechercher</string>
 </resources>
