--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -32,6 +32,7 @@
     <string name="register_profile_submit">Continue</string>
     <string name="register_input_error">All fields needed.</string>
     <string name="home_category_see_all">See all</string>
+    <string name="register_interests_error">Please select at least 3 interests</string>
     <string name="log_choice_button">Sign in with password</string>
     <string name="log_choice_title">Let\'s you in</string>
     <string name="home_play_button">Play</string>
