feat(interaction): added interaction when clicking on a movie

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -67,4 +67,5 @@
     <string name="profile_change_profile">Change profile</string>
     <string name="profile_history">History</string>
     <string name="profile_history_title">History</string>
+    <string name="media_add_list_button">My list</string>
 </resources>
