--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="profile_change_profile">Changer de profil</string>
     <string name="profile_history">Historique</string>
     <string name="profile_history_title">Historique</string>
+    <string name="media_add_list_button">Ma liste</string>
 </resources>
