--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -69,4 +69,10 @@
     <string name="profile_history">History</string>
     <string name="profile_history_title">History</string>
     <string name="media_add_list_button">My list</string>
+    <string name="modal_erase_history_title">Delete history</string>
+    <string name="modal_erase_history_subtitle">Are you sure you want to delete your history? This action is irreversible.</string>
+    <string name="modal_erase_history_cancel">Cancel</string>
+    <string name="modal_erase_history_erase">Delete</string>
+    <string name="home_tab_movie_title">Movies</string>
+    <string name="home_tab_serie_title">Series</string>
 </resources>
