feat(series): add episodes play

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="media_play_warn">C\'est illégal, nous ne pouvons pas diffuser les films sans en avoir les droits de distribution</string>
     <string name="media_play_warn_confirmation">Êtes-vous sûr de vouloir regarder le film illégalement ?</string>
 
-    <string name="list_title">Ma Liste</string>
+    <string name="list_title">Ma liste</string>
 
     <string name="profile_toolbar">Profil</string>
     <string name="profile_edit_profile">Modifier votre profil</string>
