feat(splashscreen): add splashscreen for API < 32 (where it's natively integrated)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="privacy_policy_text_6">FlixHub se réserve le droit de modifier cette politique de confidentialité à tout moment. Toute modification de cette politique de confidentialité sera affichée sur cette page avec la date de révision mise à jour.</string>
     <string name="privacy_policy_title_7">6. Contactez-nous :</string>
     <string name="privacy_policy_text_7">Si vous avez des questions ou des préoccupations concernant cette Politique de Confidentialité, veuillez nous contacter à l\'adresse suivante : nassimlnd37@gmail.com.  Cette politique de confidentialité a été mise à jour le 27 mars 2024.</string>
+    <string name="user_informations_title">Informations du compte</string>
 </resources>
